# 2.1 完成 && 2.2 部分內容 && 2.5 部分內容

--- a/CH2/2.1/2.1.4.html
+++ b/CH2/2.1/2.1.4.html
@@ -7,31 +7,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <link rel="stylesheet" href="/CH2/2.5/2.5.2.css">
 </head>
 
 <body>
     <div id="app">
-        <button @click="isShow =! isShow">Toggle</button>
-
-        <div style="height: 120px;">
-            <transition name="fade">
-                <div class="block" v-if="isShow">Block 1</div>
-                <div class="block" v-else>Block 2</div>
-            </transition>
-        </div>
+        {{msg}}
+        <test-c></test-c>
+        <test-c></test-c>
+        <test-c></test-c>
+        <test-c></test-c>
     </div>
 
+    <script id="test-c" type="text/x-template">
+        <div>x-template</div>
+        <div>{{test2}}</div>
+    </script>
+    
     <script>
         const app = Vue.createApp({
             data() {
                 return {
-                    isShow: true
+                    msg: "hello!"
                 }
             }
         });
 
-        app.mount('#app');
+        app.component('test-c', {
+            template: '#test-c',
+            data() {
+                return {
+                    test2: 'no',
+                }
+            }
+        })
+
+        app.mount("#app");
     </script>
 </body>
 
